# rust-bitcoin-coin-selection

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  run_proptests.sh  rustfmt.toml
.github/workflows/: rust.yml
benches/: bnb_selection.rs  coin_selection.rs  srd_selection.rs
bitcoin-coin-selection/: Cargo.toml
bitcoin-coin-selection/benches/: coin_selection.rs
bitcoin-coin-selection/src/: branch_and_bound.rs  single_random_draw.rs
contrib/: test.sh
examples/: select_coins.rs
fuzz/: Cargo.toml
fuzz-coin-selection/: Cargo.toml
fuzz-coin-selection/src/: .main.rs.swp  main.rs
fuzz/fuzz_targets/: branch_and_bound.rs  branch_and_bound_select_coins.rs  coin_grinder.rs  select_coins.rs  select_coins_bnb.rs  select_coins_coin_grinder.rs  select_coins_srd.rs  single_random_draw.rs  single_random_draw_select_coins.rs
fuzz/src/: lib.rs
prop/: Cargo.toml
prop/src/: main.rs
src/: branch_and_bound.rs  coin_grinder.rs  errors.rs  lib.rs  single_random_draw.rs  weighted_utxo.rs
