[package]
authors = [
  "Yancy Ribbens <email@yancy.lol>",
]
edition = "2018"
license = "CC0-1.0"
name = "bitcoin-coin-selection"
repository = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection"
version = "0.7.0"
# documentation = "https://docs.rs/bitcoin-coin-selection/"
description = "Libary providing utility functions to efficiently select a set of UTXOs."
keywords = ["bitcoin", "coin-selection", "coin", "coinselection", "utxo"]
readme = "README.md"
rust-version = "1.63.0"

[dependencies]
bitcoin-units = { git = "https://github.com/rust-bitcoin/rust-bitcoin.git", rev = "806b34aefc554c23cec2d1293113a589718c8cdf", features = ["arbitrary"] }
rand = { version = "0.8.5", default-features = false, optional = true }

[dev-dependencies]
bitcoin-units = { git = "https://github.com/rust-bitcoin/rust-bitcoin.git", rev = "806b34aefc554c23cec2d1293113a589718c8cdf", features = ["arbitrary"] }
criterion = "0.6"
bitcoin-coin-selection = {path = ".", features = ["rand"]}
rand = "0.8.5"
arbitrary = { version = "1", features = ["derive"] }
arbtest = "0.3.1"
exhaustigen = "0.1.0"

[[bench]]
name = "bnb_selection"
harness = false

[[bench]]
name = "srd_selection"
harness = false
