[package]
name = "bitcoin-coin-selection-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.8.5"
bitcoin-units = { git = "https://github.com/rust-bitcoin/rust-bitcoin.git", rev = "15065b78c782afecc86647283dbb646ddacf217e", features = ["arbitrary"] }
arbitrary = { version = "1", features = ["derive"] }

[dependencies.bitcoin-coin-selection]
path = ".."
features = ["rand"]

[[bin]]
name = "select_coins_srd"
path = "fuzz_targets/select_coins_srd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "select_coins_bnb"
path = "fuzz_targets/select_coins_bnb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "select_coins"
path = "fuzz_targets/select_coins.rs"
test = false
doc = false
bench = false
