[package]
name = "bitcoin-coin-selection-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.8.5"
bitcoin-units = { version = "1.0.0-rc.0", features = ["arbitrary"] }
arbitrary = { version = "1", features = ["derive"] }

[dependencies.bitcoin-coin-selection]
path = ".."
features = ["rand"]

[[bin]]
name = "single_random_draw"
path = "fuzz_targets/single_random_draw.rs"
test = false
doc = false
bench = false

[[bin]]
name = "branch_and_bound"
path = "fuzz_targets/branch_and_bound.rs"
test = false
doc = false
bench = false

[[bin]]
name = "coin_grinder"
path = "fuzz_targets/coin_grinder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "select_coins"
path = "fuzz_targets/select_coins.rs"
test = false
doc = false
bench = false
