[package]
name = "prop"
version = "0.1.0"
edition = "2021"

[dependencies]
proptest = "1.5.0"
bitcoin-coin-selection = { path = "../bitcoin-coin-selection", features = ["rand"] }
bitcoin = { git = "https://github.com/yancyribbens/rust-bitcoin.git", rev = "edcd2fb5d78be71a60709d18fb367fd56171ff26" }
rand = "0.8.5"
